--- a/src/pages/material-grc.astro
+++ b/src/pages/material-grc.astro
@@ -1,5 +1,26 @@
+-import BaseLayout from '../components/BaseLayout.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import { MATERIALS, SERVICES, SITE_CONFIG } from '../utils/constants.js';
+import { generateJsonLd } from '../utils/seo.js';
+
+const material = MATERIALS.find(m => m.id === 'grc');
+if (!material) throw new Error('Material GRC not found');
+
+const recommendedService = SERVICES.find(s => s.id === 'laser-co2');
+if (!recommendedService) throw new Error('Recommended service not found');
+
+// Generate JSON-LD
+const jsonLd = generateJsonLd({
+  title: `${material.name} - Material Laser Cutting Premium`,
+  description: material.description,
+  url: `${SITE_CONFIG.url}material-grc/`,
+  type: 'Product'
+});
+
 ---
-import BaseLayout from '../components/BaseLayout.astro';
+
+<BaseLayoutBaseLayout from '../components/BaseLayout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { MATERIALS, SERVICES } from '../utils/constants.js';
