--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,7 +3,7 @@ import BaseLayout from '../../components/BaseLayout.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import { BLOG_POSTS } from '../../utils/constants.js';
-import { generateBlogPostSchema, generateBreadcrumbSchema } from '../../utils/seo.js';
+import { generateBlogPostSchema, generateBreadcrumbSchema } from '../../utils/seo';
 
 type Post = {
   id: number;
