--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,7 +5,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import CTA from '../components/CTA.astro';
 import { FAQ, SITE_CONFIG, WHATSAPP_MESSAGES } from '../utils/constants.js';
-import { generateMetaTags } from '../utils/seo.js';
+import { generateMetaTags } from '../utils/seo.ts';
 
 import type { Props as BaseLayoutProps } from '../components/BaseLayout.astro';
 
