--- a/src/pages/material-ply-wood-multiplex.astro
+++ b/src/pages/material-ply-wood-multiplex.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../components/BaseLayout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { MATERIALS, SERVICES, SITE_CONFIG } from '../utils/constants.js';
-import { generateJsonLd } from '../utils/seo.js';
+import { generateJsonLd } from '../utils/seo.ts';
 
 const material = MATERIALS.find(m => m.id === 'plywood');
 if (!material) throw new Error('Material Plywood not found');
