--- a/src/pages/jasa-laser-fiber.astro
+++ b/src/pages/jasa-laser-fiber.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro';
 import Hero from '../components/Hero.astro';
 import CTA from '../components/CTA.astro';
 import { SERVICES, SITE_CONFIG, WHATSAPP_MESSAGES } from '../utils/constants.js';
-import { generateMetaTags, generateServiceSchema, generateBreadcrumbSchema } from '../utils/seo.js';
+import { generateMetaTags, generateServiceSchema, generateBreadcrumbSchema } from '../utils/seo.ts';
 
 // Find Laser Fiber service
 const service = SERVICES.find(s => s.slug === 'jasa-laser-fiber');
