--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../components/BaseLayout.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { PORTFOLIO, SITE_CONFIG } from '../utils/constants.js';
-import { generateJsonLd } from '../utils/seo.js';
+import { generateJsonLd } from '../utils/seo.ts';
 
 interface HTMLElementWithStyle extends HTMLElement {
   style: CSSStyleDeclaration;
